--- a/Front-Taller/package.json
+++ b/Front-Taller/package.json
@@ -13,13 +13,19 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.5",
     "@types/react-bootstrap": "^0.32.37",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.5",
     "cors": "^2.8.5",
     "i18next": "^23.15.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-i18next": "^15.0.2",
